--- a/McMatchmaker/package.json
+++ b/McMatchmaker/package.json
@@ -6,9 +6,17 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
+  },
   "dependencies": {
+    "parse": "^2.1.0",
     "react": "16.6.3",
-    "react-native": "0.58.1"
+    "react-native": "0.58.1",
+    "react-native-firebase": "^5.2.1",
+    "react-navigation": "^3.0.9"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
